
2022-08-26  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (copy_literal): inlined into literal handling and added
	  missing check for actual literal, fixing bug #773
	* tree.c, tree.h, cobc.c: moved cobc_enum_explain from cobc.c to
	  tree.c as cb_enum_explain
	* tree.h (CB_TREE_TAG_UNEXPECTED_ABORT), field.c, tree.c, typeck.c,
	  codegen.c: added new macro and using it
	* field.c (cb_validate_88_item): check against numeric for all type of
	  values, not only the figurative constants
	* cobc.c, error.c: adjusted message handling to use local buffers
	* field.c (has_std_needed_screen_clause), typeck.c (validate_alphabet),
	  codegen.c (output_initialize_one): minor refactorings

2022-08-20  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: match and ignore editor folding $REGION statement
	* pplex.l: output actual directive for @OPTIONS and PROCESS
	* pplex.l: *CONTROL from col7+
	* pparse.y: don't warn on *CONTROL as this adjust listing only
	  and does not apply directly (possibly real handling later)

2022-08-19  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (validate_any_length_item): don't enforce codegen for
	  unused ANY LENGTH items
	* parser.y, cobc.c (cobc_xref_set_receiving): set XML and JSON
	  registers to be receiving items in XML and JSON statements
	  and to increment their used counter
	* cobc.c, codegen.c (has_field_to_dump): only output symbol and
	  xref headers as well as dump comments if there are actual
	  generated fields

2022-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (create_field): extracted from (output_param)
	* parser.y, codegen.c ,tree.c, tree.h: added codegen for XML PARSE
	* reserved.c, config.h, parser.y, tree.h, cobc.c: added parsing
	  for XML-SCHEMA clause in SPECIAL NAMES
	* typeck.c: adjust for generation of ANY LENGTH registers (only to be
	  set in the runtime)
	* reserved.c, typeck.c: added all XML and JSON registers
	* config.def, parser.y, codegen.c: added cb_xml_parse_xmlss, passed