@@ -297,6 +297,7 @@ reserved-words:		default
 # not-reserved:
 # Value: Word to be taken out of the reserved words list
 not-reserved:	TERMINAL
+not-reserved:	EXAMINE
 # reserved:
 #   Entries of the form word-1=word-2 define word-1 as an alias for default
 # reserved word word-2. No spaces are allowed around the equal sign.
